--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,12 +4,16 @@ bcrypt==4.0.1
 cffi==1.15.1
 click==8.1.7
 cryptography==41.0.3
+dnspython==2.4.2
 ecdsa==0.18.0
+email-validator==2.0.0.post2
 fastapi==0.103.1
 greenlet==2.0.2
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 mysql-connector-python==8.1.0
 passlib==1.7.4
 protobuf==4.21.12
@@ -19,6 +23,7 @@ pydantic==2.3.0
 pydantic_core==2.6.3
 python-dotenv==1.0.0
 python-jose==3.3.0
+python-multipart==0.0.6
 PyYAML==6.0.1
 rsa==4.9
 six==1.16.0
